Bug 96178 - [WK2] Fix PLATFORM(WIN) vs. OS(WINDOWS) in various files
Summary: [WK2] Fix PLATFORM(WIN) vs. OS(WINDOWS) in various files
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Simon Hausmann
URL:
Keywords:
Depends on:
Blocks: 76776
  Show dependency treegraph
 
Reported: 2012-09-07 23:59 PDT by Simon Hausmann
Modified: 2012-09-09 07:46 PDT (History)
1 user (show)

See Also:


Attachments
Patch (4.77 KB, patch)
2012-09-08 00:01 PDT, Simon Hausmann
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Hausmann 2012-09-07 23:59:47 PDT
[WK2] Fix PLATFORM(WIN) vs. OS(WINDOWS) in various files
Comment 1 Simon Hausmann 2012-09-08 00:01:26 PDT
Created attachment 162948 [details]
Patch
Comment 2 WebKit Review Bot 2012-09-09 07:46:03 PDT
Comment on attachment 162948 [details]
Patch

Clearing flags on attachment: 162948

Committed r127983: <http://trac.webkit.org/changeset/127983>
Comment 3 WebKit Review Bot 2012-09-09 07:46:06 PDT
All reviewed patches have been landed.  Closing bug.