[WK2] Fix PLATFORM(WIN) vs. OS(WINDOWS) in various files https://bugs.webkit.org/show_bug.cgi?id=96178

Patch by Simon Hausmann <simon.hausmann@nokia.com> on 2012-09-09
Reviewed by Kenneth Rohde Christiansen.

PLATFORM(WIN) is used in various places, where it is safe to use OS(WINDOWS) to allow
the re-use of that code path in ports beyond Safari/Windows.

* Platform/CoreIPC/BinarySemaphore.h:
(BinarySemaphore):
* Platform/CoreIPC/Connection.h:
(Connection):
* Platform/SharedMemory.h:
(Handle):
(SharedMemory):
* Platform/WorkQueue.h:

Canonical link: https://commits.webkit.org/114081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127983 268f45cc-cd09-0410-ab3c-d52691b4dbfc