Source/WebKit2/Platform/CoreIPC/BinarySemaphore.h
@@ -41,12 +41,12 @@ public:
     void signal();
     bool wait(double absoluteTime);
 
-#if PLATFORM(WIN)
+#if OS(WINDOWS)
     HANDLE event() const { return m_event; }
 #endif
 
 private:
-#if PLATFORM(WIN)
+#if OS(WINDOWS)
     HANDLE m_event;
 #else
     bool m_isSet;
