Source/WebKit2/Platform/SharedMemory.h
@@ -68,7 +68,7 @@ public:
         friend class SharedMemory;
 #if OS(DARWIN)
         mutable mach_port_t m_port;
-#elif PLATFORM(WIN)
+#elif OS(WINDOWS)
         mutable HANDLE m_handle;
 #elif USE(UNIX_DOMAIN_SOCKETS)
         mutable int m_fileDescriptor;
@@ -82,7 +82,7 @@ public:
     // Create a shared memory object from the given handle and the requested protection. Will return 0 on failure.
     static PassRefPtr<SharedMemory> create(const Handle&, Protection);
     
-#if PLATFORM(WIN)
+#if OS(WINDOWS)
     static PassRefPtr<SharedMemory> adopt(HANDLE, size_t, Protection);
 #endif
 
@@ -92,7 +92,7 @@ public:
 
     size_t size() const { return m_size; }
     void* data() const { return m_data; }
-#if PLATFORM(WIN)
+#if OS(WINDOWS)
     HANDLE handle() const { return m_handle; }
 #endif
 
@@ -107,7 +107,7 @@ private:
     void* m_data;
 #if OS(DARWIN)
     mach_port_t m_port;
-#elif PLATFORM(WIN)
+#elif OS(WINDOWS)
     HANDLE m_handle;
 #elif USE(UNIX_DOMAIN_SOCKETS)
     int m_fileDescriptor;
